--- a/fire/examples/config.py.example
+++ b/fire/examples/config.py.example
@@ -2,10 +2,10 @@
 
 cfg = {
     ### Global Set
-    "model_name": "se_resnext50_32x4d",  
+    "model_name": "mobilenetv2",  
     #mobilenetv3 adv-efficientnet-b2 se_resnext50_32x4d  xception resnext101_32x8d_wsl
     'GPU_ID': '0',
-    "class_number": 5,
+    "class_number": 2,
 
     "random_seed":42,
     "cfg_verbose":True,
@@ -13,30 +13,32 @@ cfg = {
 
 
     ### Train Setting
-    'train_path':"../data/train_images",
-    'label_type': 'CSV',# path or 'DIR' 
-    'label_path': '../data/train.csv',# if 'DIR' quale  train_path
+    'train_path':"../data/dataset/d_trainval/v8/train/",
+    #../data/dataset/e_test
+    #../data/dataset/d_trainval/v8/train/
+    'label_type': 'DIR',# path or 'DIR' 
+    'label_path': '',# if 'DIR' quale  train_path
     'val_path':"",
-    'pretrained':'', #path or ''
+    'pretrained':'pretrained/mobilenet_v2-b0353104.pth', #path or ''
     #pretrained/se_resnext50_32x4d-a260b3a4.pth
     'log_interval':10,  
     'try_to_train_items': 0,   # 0   
-    'save_best_only': False,
+    'save_best_only': True,
     "save_dir": "output/",
     'pin_memory': True,
-    'metrics': [''], # default is acc,  can add F1  ...
+    'metrics': ['F1'], # default is acc,  can add F1  ...
 
 
     ### Train Hyperparameters
-    "img_size": [300, 400], # [h, w]
+    "img_size": [224, 224], # [h, w]
     'learning_rate':0.001,
-    'batch_size':8,
+    'batch_size':64,
     'epochs':10,
-    'optimizer':'Ranger',  #Adam  SGD AdaBelief Ranger
+    'optimizer':'Adam',  #Adam  SGD AdaBelief Ranger
     'scheduler':'SGDR-10-2', #default  SGDR-5-2  CVPR   step-4-0.8
 
     'warmup_epoch':0, # 
-    'weight_decay' : 0.0001,
+    'weight_decay' : 0,#0.0001,
     "k_flod":5,
     'start_fold':0,
     'early_stop_patient':26,
@@ -44,14 +46,16 @@ cfg = {
     'use_distill':0,
     'label_smooth':0,
     'checkpoint':None,
-    'class_weight': None, # None
-    'clip_gradient': 1,       # 0
-    'freeze_nonlinear_epoch':2,
+    'class_weight': None,#[1.8, 1], # None
+    'clip_gradient': 0,#1,       # 0
+    'freeze_nonlinear_epoch':0,
+
+    'dropout':0.2,
 
 
     ### Test
-    'model_path':'output/se_resnext50_32x4d_e1_0.73000.pth',
-    'test_path':"../data/test_images",#_resize_rotate
+    'model_path':'output/mobilenetv3_e10_0.99928.pth',
+    'test_path':"../data/dataset/e_test",#_resize_rotate
     'use_TTA':0,
     'test_batch_size': 1,
     
